# SimASM

./: .gitignore  CMakeLists.txt  FileParsing.cpp  FileParsing.h  LICENCE  README.md  example.txt  fileReader.cpp  fileReader.h  main  main.cpp
ASMFiles/: example.txt  factorial.txt  programTest.txt  v1.txt  v2.txt
src/: ControlProcessUnit.cpp  ControlProcessUnit.hpp  FileParsing.cpp  FileParsing.h  FileParsing.hpp  Memory.cpp  Memory.hpp  Sequencer.cpp  Sequencer.hpp  SyntaxChecker.cpp  SyntaxChecker.hpp  main.cpp
src/CPUSubClasses/: ALU.cpp  ALU.hpp  Alu.cpp  Alu.hpp  Code.hpp  StackRegisters.cpp
src/CPUdependencies/: ArithmeticLogicUnit.cpp  ArithmeticLogicUnit.hpp  Code.cpp  Code.hpp  Register.cpp  Register.hpp  StackRegisters.cpp  StackRegisters.hpp
src/SyntaxSubClasses/: Instructions.cpp  Instructions.hpp
